Second[Agent] angular to react

--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "angularjs-by-example",
-  "version": "1.0.0",
-  "description": "An example application to demonstrate a wide range of AngularJS best practices",
-  "main": "index.html",
+  "name": "Todo App",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.31",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/RevillWeb/angularjs-by-example.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [
-    "angularjs",
-    "example",
-    "angularjs",
-    "tutorial",
-    "angularjs"
-  ],
-  "author": "Leon Revill",
-  "license": "BSD-2-Clause",
-  "bugs": {
-    "url": "https://github.com/RevillWeb/angularjs-by-example/issues"
-  },
-  "devDependencies": {
-    "gulp": "~3.8.8",
-    "gulp-concat": "~2.4.1",
-    "gulp-connect": "~2.0.6",
-    "gulp-uglify": "~1.0.1",
-    "gulp-ng-annotate": "~0.3.3",
-    "gulp-usemin": "~0.3.8",
-    "gulp-rev": "~1.1.0",
-    "gulp-rev-outdated": "0.0.6",
-    "gulp-minify-css": "~0.3.10",
-    "gulp-ng-html2js": "~0.1.8",
-    "gulp-inject": "~1.0.2",
-    "gulp-clean": "~0.3.1",
-    "gulp-replace": "~0.4.0",
-    "gulp-angular-extender": "~0.1.0"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
